--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,10 +8,14 @@
     background-image: radial-gradient(
       circle at right bottom,
       theme(colors.violet.900),
-      theme(colors.violet.600),
+      theme(colors.violet.700),
       transparent
     );
     border-bottom: 5px solid theme(colors.lime.500);
+    -webkit-mask-image: linear-gradient(
+      theme(colors.violet.600) 85%,
+      rgba(0, 0, 0, 0) 98%
+    );
   }
 
   .grainy::before {
@@ -22,10 +26,17 @@
     top: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.2;
+    opacity: 0.25;
     background-image: url('https://cdn.beacons.ai/user_content/axaWeR0asKVRTHo2uxedx5HnC8R2/backgrounds/home/background_ilhadaslendas.png?t=1674843222900');
     background-repeat: no-repeat;
-    background-position: 10% 23%;
+    background-position: 10% 15%;
     background-size: cover;
+  }
+
+  .mask {
+    -webkit-mask-image: radial-gradient(
+      circle at center theme(colors.violet.600) 85%,
+      rgba(0, 0, 0, 0) 98%
+    );
   }
 }
